Masternode new ux (#507)
* Masternode new ux wip

* wip

* Desing fixes

* Made new design dynamic

* Made changes in design to make it dynamic

* Update defi.conf masternode creation changes

* Updated utils names

* Made changes in footer

* made CSS changes

* PR comments and improvements

* Fix: condition for conf update

Co-authored-by: JJ Adonis <josejaimecareers@gmail.com>

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -136,7 +136,16 @@
         "lockedInCollateral": "Gesperrt in Collateral",
         "costPerMasterNode": "Kosten pro Masternode",
         "masternodeWorth": "Masternode-Wert",
-        "searchBar": "Suche nach Masternodes"
+        "searchBar": "Suche nach Masternodes",
+        "mine": "Mine",
+        "all": "All",
+        "owner": "Owner",
+        "operator": "Operator",
+        "type": "Type",
+        "collateral": "Collateral",
+        "collateralsActive": "Collaterals active",
+        "collateralsInactive": "Collaterals inactive",
+        "dFIMinted": "DFI minted"
       },
       "masterNodesList": {
         "ownerAddress": "Besitzer-Adresse",
