--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -577,7 +577,8 @@
       "updatingPassphrase": "Updating passphrase",
       "incorrectPassphrase": "The current passphrase entered is incorrect.",
       "minute": "%{time} minute",
-      "minutes": "%{time} minutes"
+      "minutes": "%{time} minutes",
+      "years": "%{time} years"
     },
     "wallet": {
       "createOrRestoreWalletPage": {
@@ -585,7 +586,7 @@
         "createOrRestoreWallet": "Create or restore wallet",
         "createANewWallet": "Create a new wallet",
         "restoreWalletFromMnemonicSeed": "Restore wallet from recovery seed",
-        "walletSyncNotice": "You will be able to create or restore a wallet when sync is complete",
+        "walletSyncNotice": "You will be able to create or restore a wallet when sync is complete.",
         "loading": "Loading...",
         "restoreFromBackup": "Restore wallet from backup",
         "connectToALedger": "Connect to a hardware wallet",
@@ -891,7 +892,8 @@
     "unlock": "Unlock",
     "enterYourPassphrase": "Enter your passphrase",
     "walletUnlockTitle": "Welcome back",
-    "walletUnlockMessage": "Enter your passphrase to unlock your wallet.",
+    "walletUnlockMessage": "Enter your passphrase and select a duration to unlock your wallet.",
+    "walletUnlockMasternodeMessage": "You are currently running a masternode on a locked wallet. Please unlock your wallet with your passphrase to continue mining.",
     "lostPassphraseMessage": "I lost my passphrase",
     "backupWalletWarningModelHeader": "Wallet backup warning",
     "backupNow": "Backup now",
@@ -913,8 +915,9 @@
     "exit": "Exit",
     "deletePeersAndBlocks": "Delete peers and blocks",
     "walletBackupWarning": "Wallet has been encrypted successfully. Please backup your wallet immediately. Do you want to proceed?",
-    "nodeVersionUpdate": "Node has been updated to version %{version}. An app reindex is required. Do you want to restart now?",
-    "nodeVersionHeader": "Node update"
+    "nodeVersionUpdate": "The node has been updated to version %{version}. A restart is required for re-indexing and changes to take effect. Do you want to restart now?",
+    "nodeVersionHeader": "Node update",
+    "masternodesAlert": "You are currently running a masternode. Mining will not work on a locked wallet. Do you want to proceed?"
   },
   "general": {
     "defiApp": "DeFi app",
