--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -116,7 +116,8 @@
       "reddit": "Reddit community",
       "helpTextFooterLine1": "DeFiChain is a community-driven and open project.",
       "helpTextFooterLine2": "The DeFiChain Foundation does not provide direct support.",
-      "section": "Section"
+      "section": "Section",
+      "wiki": "Community Wiki"
     },
     "masterNodes": {
       "masterNodesPage": {
