fix: add label on auto-lock disable (#593)
* fix: fixes for MN page

* feat: restructured defi configuration

* feat: off configs on exit wallet

* feat: display lock screen for MNs

* feat: unlock for max timeout

* feat: lock wallet warning

* feat: last changes for MN

* style: codacy fix

* feat: text for disabled auto-lock

* style: adjust padding

* style: changed end tag

* removed space

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -579,7 +579,8 @@
       "incorrectPassphrase": "The current passphrase entered is incorrect.",
       "minute": "%{time} minute",
       "minutes": "%{time} minutes",
-      "years": "%{time} years"
+      "years": "%{time} years",
+      "autoLockMNWarning": "Auto-lock timeout is disabled when masternode(s) are active."
     },
     "wallet": {
       "createOrRestoreWalletPage": {
