feat: enable/disable masternode (#613)
* feat: enable/disable masternode

* fix: remove unused variables

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -145,7 +145,10 @@
         "collateral": "Collateral",
         "collateralsActive": "Collaterals active",
         "collateralsInactive": "Collaterals inactive",
-        "dFIMinted": "DFI minted"
+        "dFIMinted": "DFI minted",
+        "created": "Erstellt",
+        "resigned": "Resigned",
+        "preresigned": "Pre-resigned"
       },
       "masterNodesList": {
         "ownerAddress": "Besitzer-Adresse",
