--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -30,6 +30,7 @@
   "containers": {
     "sideBar": {
       "balance": "Balance",
+      "balances": "Guthaben",
       "dfi": "DFI",
       "wallets": "Wallets",
       "dex": "DEX",
@@ -217,7 +218,8 @@
         "searchTokens": "Token suchen",
         "dat": "DAT",
         "dct": "DCT",
-        "paginationRange": "%{from} – %{to} von %{total} Token",
+        "remove": "Entfernen",
+        "paginationRange": "%{from} – %{to} von %{total} Tokens",
         "datLabels": {
           "type": "Typ",
           "price": "Preis",
@@ -736,6 +738,7 @@
         "walletDeFiApp": "Wallet",
         "walletDefiClient": "Wallet",
         "wallet": "wallet",
+        "balances": "Guthaben",
         "wallets": "Wallets",
         "delete": "Löschen",
         "send": "Senden",
@@ -769,7 +772,8 @@
       "walletWalletsPage": {
         "walletWallets": "Wallets",
         "wallets": "Wallets",
-        "addWallet": "Wallet hinzufügen"
+        "addWallet": "Wallet hinzufügen",
+        "addBalance": "Guthaben hinzufügen"
       },
       "walletAddTokensPage": {
         "walletAddTokens": "Wallet - Token hinzufügen",
