--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -30,6 +30,7 @@
   "containers": {
     "sideBar": {
       "balance": "Balance",
+      "balances": "Balances",
       "dfi": "DFI",
       "wallets": "Wallets",
       "dex": "DEX",
@@ -222,6 +223,7 @@
         "dat": "DAT",
         "dct": "DCT",
         "paginationRange": "%{from} – %{to} of %{total} tokens",
+        "remove": "Remove",
         "datLabels": {
           "type": "Type",
           "price": "Price",
@@ -741,6 +743,7 @@
         "walletDeFiApp": "Wallet",
         "walletDefiClient": "Wallet",
         "wallet": "wallet",
+        "balances": "Balances",
         "wallets": "Wallets",
         "delete": "Delete",
         "send": "Send",
@@ -782,7 +785,8 @@
       "walletWalletsPage": {
         "walletWallets": "Wallets",
         "wallets": "Wallets",
-        "addWallet": "Add wallet"
+        "addWallet": "Add wallet",
+        "addBalance": "Add Balance"
       },
       "walletAddTokensPage": {
         "walletAddTokens": "Wallet – Add token",
