--- a/webapp/src/translations/languages/nl.json
+++ b/webapp/src/translations/languages/nl.json
@@ -182,6 +182,7 @@
         "searchTokens": "Zoek Tokens",
         "dat": "DAT",
         "dct": "DCT",
+        "remove": "Remove",
         "paginationRange": "%{from} – %{to} van %{total} tokens",
         "datLabels": {
           "type": "Type",
