--- a/webapp/src/translations/languages/zhs.json
+++ b/webapp/src/translations/languages/zhs.json
@@ -205,6 +205,7 @@
         "searchTokens": "探索代币",
         "dat": "DAT",
         "dct": "DCT",
+        "remove": "删除",
         "paginationRange": "%{total} 代币之 %{from} – %{to}",
         "datLabels": {
           "type": "类型",
