--- a/webapp/src/translations/languages/ru.json
+++ b/webapp/src/translations/languages/ru.json
@@ -131,7 +131,7 @@
       "createMasterNode": {
         "title": "Создать мастерноду",
         "masterNodeName": "Имя мастерноды",
-        "lackOfBalanceMsg": "Не удалось создать мастерноду из-за нехватки средств. Для создания мастерноды требуется минимум 1 миллион DFI",
+        "lackOfBalanceMsg": "Не удалось создать мастерноду из-за нехватки средств. Для создания мастерноды требуется минимум 20,000 DFI",
         "confirmationText": "Вы уверены, что хотите создать мастерноду?",
         "restartNodeConfirmationText": "Вы уверены, что хотите перезапустить ноду?",
         "createNodeButton": "Создать мастерноду",
