Switch from mnemonic phrase to Wallet Backup (#651)

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -926,7 +926,7 @@
     "noResetWalletNotice": "No",
     "download": "Download",
     "restoreYourWallet": "Restore your wallet from the following backup?",
-    "exitBackupWarning": "Exiting your wallet now will remove your wallet from the app. You will need your mnemonic seed phrase if you want to add this wallet later. Do you wish to backup your wallet before exiting?",
+    "exitBackupWarning": "Exiting your wallet now will remove your wallet from the app. To access this wallet again later, you will need the wallet backup. Do you want to create a wallet backup first before exiting?",
     "backupAndExit": "Backup and Exit",
     "exit": "Exit",
     "deletePeersAndBlocks": "Delete peers and blocks",
