--- a/webapp/src/translations/languages/nl.json
+++ b/webapp/src/translations/languages/nl.json
@@ -600,6 +600,6 @@
     "deletePeersAndBlocks": "Delete peers and blocks"
   },
   "general": {
-    "defiApp": "DeFi app"
+    "defiApp": "DeFi "
   }
 }
